--- a/es6语法学习/let,const.html
+++ b/es6语法学习/let,const.html
@@ -15,6 +15,21 @@
 			}
 		}
 		//fnc();
-		
+		for (let i = 0; i < 5; i++) {
+
+		};
+		//console.log(i)
+		//顶层对象和全局变量
+		var a = 1;
+		//console.log(window.a);
+		//console.log(self.a,'a');//self也可以指向顶层对象
+		let b = 5;
+		//console.log(window.b);//undefined
+		//解构赋值
+		let x = 1,
+			y = 2;
+		[x, y] = [y, x];
+		console.log(x)
+		console.log(y)
 	</script>
 </html>
