--- a/es6语法学习/template_string.html
+++ b/es6语法学习/template_string.html
@@ -5,5 +5,19 @@
 		<title></title>
 	</head>
 	<body>
+		<div class="container">
+			
+		</div>
 	</body>
+	<script type="text/javascript" src="js/jquery-3.3.1.js">
+	</script>
+	<script type="text/javascript">
+		//模版字符串用法
+		{
+			let zlc_name = '张良晨';
+			let html = `<div>${zlc_name}</div>`
+			$('.container').append(html);
+		}
+		
+	</script>
 </html>
